# ChangeLog for games-mud/wxmud
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2007; Mart Raudsepp <leio@gentoo.org> +metadata.xml,
  +wxmud-9999.ebuild:
  Initial import of wxMUD to my overlay. This is a graphical MUD client with
  full MXP support and other things, maintained by me upstream
