@@ -1,2 +1,3 @@
-EBUILD wxmud-9999.ebuild 998 RMD160 0695aabe0b72bde57b7ab5ced51e830eb42b9f71 SHA1 2ac047208985cd56fa9c710f59d4d3344ce5a783 SHA256 dc427d75defb17ec10b3246e3b7e821e533231b714d3b61420bbe0f141ae8228
+EBUILD wxmud-9999.ebuild 957 RMD160 a51614c7a8f5d66b5d49876872f52132dd314b68 SHA1 88746df7835c32da8b9075a08bcf74c3e856ee48 SHA256 de9c23452dd5701c7b3c11e341a0a41f3c47bc152660f6c3ddfd0ca2474a70f1
+MISC ChangeLog 438 RMD160 3eb5b2fe76015e0eb660659fdccaf852e093437a SHA1 6ca54d1e4b0bf70dde0067280752bb7198e9118e SHA256 861c1e28caff6fa62c26ee9256ba2675fdde773a98b960d786ec7b9dfa899f33
 MISC metadata.xml 388 RMD160 c39ae3eb3f0a2539b0f6e8ef6896c62a18d670db SHA1 f15f0e87e4189a9daa251138abbea2d74eadcfc6 SHA256 9c7fef05df7a4d723b31dd7bea2b64a2daab88cb2416048cc6bb309efdce6b7b
