@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Dec 2007; Mart Raudsepp <leio@gentoo.org> wxmud-9999.ebuild:
+  Build against wxWidgets-2.8
+
   21 Oct 2007; Mart Raudsepp <leio@gentoo.org> +metadata.xml,
   +wxmud-9999.ebuild:
   Initial import of wxMUD to my overlay. This is a graphical MUD client with
